force-app/main/default/objects/Job_Description__c/fields/Experience_In_Years__c.field-meta.xml
<CustomField>
    <fullName>Experience_In_Years__c</fullName>
    <label>Experience In Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>