force-app/main/default/objects/Job_Description__c/fields/Previous_experience_as__c.field-meta.xml
<CustomField>
    <fullName>Previous_experience_as__c</fullName>
    <label>Previous experience as</label>
    <length>255</length>
    <type>Text</type>
</CustomField>