force-app/main/default/objects/Job_Description__c/fields/Requirement_1__c.field-meta.xml
<CustomField>
    <fullName>Requirement_1__c</fullName>
    <label>Requirement 1</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>