force-app/main/default/objects/Job_Description__c/fields/Requirement_2__c.field-meta.xml
<CustomField>
    <fullName>Requirement_2__c</fullName>
    <label>Requirement 2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>