force-app/main/default/objects/Job_Description__c/fields/Requirement_3__c.field-meta.xml
<CustomField>
    <fullName>Requirement_3__c</fullName>
    <label>Requirement 3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>