force-app/main/default/objects/Job_Description__c/fields/Tech_Background__c.field-meta.xml
<CustomField>
    <fullName>Tech_Background__c</fullName>
    <label>Tech Background</label>
    <length>255</length>
    <type>Text</type>
</CustomField>