force-app/main/default/objects/Job_Description__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>25</length>
    <type>Text</type>
</CustomField>